--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.2.12",
     "@angular/platform-browser-dynamic": "~8.2.12",
+    "@angular/pwa": "^0.803.17",
     "@angular/router": "~8.2.12",
+    "@angular/service-worker": "~8.2.12",
+    "angular-cli-ghpages": "^0.6.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
